kubernetes-ingress-configmaps-secrets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: devops-homework
spec:
  ingressClassName: nginx
  rules:
  - host: devops.test
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: demo-backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-frontend
            port:
              number: 80
